# a-files-updater

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  clang-format.yml
ci/: check-format.sh  download_deps.bat  get_dependency.bat  localization_apply.cmd  localization_generate.cmd  localization_get_tools.cmd  localization_prepare_binaries.cmd  localization_set_translations.cmd
ci/appveyor/: build.bat  check_dependency.bat  sign_binaries.ps1
cmake/: cppcheck.cmake.txt
dependencies/: slobs-updater.exe.txt
locale/: messages.pot
locale/ar_SA/LC_MESSAGES/: messages.po
locale/cs_CZ/LC_MESSAGES/: messages.po
locale/da_DK/LC_MESSAGES/: messages.po
locale/de_DE/LC_MESSAGES/: messages.po
locale/el/LC_MESSAGES/: messages.mo  messages.po
locale/en_US/LC_MESSAGES/: messages.po
locale/es_ES/LC_MESSAGES/: messages.po
locale/fr_FR/LC_MESSAGES/: messages.po
locale/hu_HU/LC_MESSAGES/: messages.po
locale/id_ID/LC_MESSAGES/: messages.po
locale/it_IT/LC_MESSAGES/: messages.po
locale/ja_JP/LC_MESSAGES/: messages.po
locale/ko_KR/LC_MESSAGES/: messages.po
locale/mk_MK/LC_MESSAGES/: messages.po
locale/nl_NL/LC_MESSAGES/: messages.po
locale/pl_PL/LC_MESSAGES/: messages.po
locale/pt_BR/LC_MESSAGES/: messages.po
locale/pt_PT/LC_MESSAGES/: messages.po
locale/ru/LC_MESSAGES/: messages.mo  messages.po
locale/ru_RU/LC_MESSAGES/: messages.po
locale/sk_SK/LC_MESSAGES/: messages.po
locale/sl_SI/LC_MESSAGES/: messages.po
locale/sv_SE/LC_MESSAGES/: messages.po
locale/th_TH/LC_MESSAGES/: messages.po
locale/tr_TR/LC_MESSAGES/: messages.po
locale/vi_VN/LC_MESSAGES/: messages.po
locale/zh_CN/LC_MESSAGES/: messages.po
locale/zh_TW/LC_MESSAGES/: messages.po
resources/: resource.h  slobs-updater.exe.in  slobs-updater.exe.manifest  slobs-updater.rc  slobs-updater.rc.in
src/: checksum-filters.hpp  cli-parser.cc  cli-parser.hpp  crash-reporter.cc  crash-reporter.hpp  file-updater.cc  file-updater.h  main.cc  update-blockers.cc  update-blockers.hpp  update-client-internal.hpp  update-client.cc  update-client.hpp  update-http-request.hpp  update-parameters.hpp  uri-parser.cc  uri-parser.hpp  utils.cc  utils.hpp
src/argtable/: argtable3.c  argtable3.h
src/fmt/: format.cc  posix.cc
src/fmt/fmt/: core.h  format-inl.h  format.h  ostream.h  posix.h
src/iostreams/: gzip.cpp  zlib.cpp
src/logger/: log.c  log.h
test/: TESTING.md  package.json  valid-ssl-cert.pem  valid-ssl-key.pem
test/src/: error_receive_server.js  generate_files.js  run_test.js  run_test_env.js  run_tests.js  start_error_server.js  test_config.js  test_good_update.js  updater_launcher.js  updater_server.js
